--- a/Lecture_26/style.css
+++ b/Lecture_26/style.css
@@ -46,3 +46,53 @@ a{
     display: flex;
     gap: 20px;
 }
+.footerBox{
+    background-image: linear-gradient(to right top, #143668e0, #004d7a, #008793, #00bf72, #a8eb12);
+    width: 100%;
+    text-align: center;
+    min-height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footerBox p{
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    color: beige;
+    /* line-height: normal!important; */
+    font-size: 1.2rem;
+}
+
+.contentBox{
+    width: 50%;
+    margin: auto;
+    border: 1px solid black;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+.item{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.rightBox img{
+    height: 400px;
+    width: 350px;
+    border-radius: 20px;
+    margin: 8px;
+}
+
+.leftBox{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;;
+}
+.leftBox h2{
+    font-size: 2rem;
+}
