--- a/Lecture_26/style.css
+++ b/Lecture_26/style.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 .container{
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     overflow-x: none;
     background-color: #f9fcff;
     background-image: linear-gradient(147deg, #f9fcff 0%, #dee4ea 74%);
@@ -22,7 +22,8 @@
 }
 nav{
     width: 100%;
-    padding: 12px;
+    /* padding: 12px; */
+    padding-right: 2rem;
 }
 #navList{
     width: 100%;
@@ -30,7 +31,7 @@ nav{
     font-size: 1.5em;
     display: flex;
     margin-right: 15px;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -40,7 +41,7 @@ nav{
 }
 a{
     text-decoration: none;
-    color: purple;
+    color: rgb(238, 228, 238);
 }
 #navItems{
     display: flex;
@@ -66,13 +67,15 @@ a{
 }
 
 .contentBox{
-    width: 50%;
+    width: 70%;
     margin: auto;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     background-color: white;
     display: flex;
     flex-direction: column;
     gap: 50px;
+    padding: 3rem;
+    box-shadow: 1px 1px 30px black;
 }
 .item{
     display: flex;
@@ -86,6 +89,13 @@ a{
     width: 350px;
     border-radius: 20px;
     margin: 8px;
+    transition: all 0.6s linear 0s;
+}
+/* .rightBox img:hover{
+    transform: scale(1.1);
+} */
+.rightBox:hover{
+    transform: scale(1.1);
 }
 
 .leftBox{
@@ -95,4 +105,40 @@ a{
 }
 .leftBox h2{
     font-size: 2rem;
+}
+.ingBox{
+    font-size: 1.1rem;
+}
+.recipeBox{
+    font-size: 1.1rem;
+}
+
+.rightBox{
+    position: relative;
+    overflow: hidden;
+    transition: all 0.3s linear 0s;
+}
+
+.rightBox .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(80, 85, 82, 0.63);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: all 0.3s linear 0s;
+}
+.rightBox:hover .overlay{
+    opacity:1;
+}
+
+
+.rightBox .overlay span{
+    color: rgb(255, 255, 255);
+    font-size: 1.2rem;
 }
