--- a/Lecture_27/style.css
+++ b/Lecture_27/style.css
@@ -1,4 +1,43 @@
+*{
+    padding: 0;
+    margin: 0; 
+    box-sizing: border-box;
+}
+
 .container{
     width: 100vw;
     height: 100vh;
+    min-height: 950px;
+    background-color: #8BC6EC;
+    background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card{
+    width: 360px;
+    height: 540px;
+    background-color: white;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+    padding: 20px;
+}
+
+.card img{
+    height: 60%;
+    /* padding: 5rem; */
+    border-radius: 13px;
+}
+
+.card h2{
+    font-weight: bold;
+    font-size: 1.6rem;
+}
+
+.card p{
+    font-size: 1.2em;
 }
