--- a/Lecture_27/style2.css
+++ b/Lecture_27/style2.css
@@ -48,3 +48,29 @@
     width: 80%;
     text-align: center;
 }
+
+#amountBox{
+    width: 80%;
+    height: 10%;
+    background-color: rgba(145, 195, 243, 0.897);
+    border-radius: 10px;
+}
+
+#paymentButton{
+    width: 80%;
+    height: 9%;
+    background-color: rgb(8, 8, 129);
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    cursor: pointer;
+}
+
+#paymentButton p{
+    color: white;
+}
+
+.cancelBox a{
+    text-decoration: none;
+    color: rgb(56, 52, 52);
+    font-weight: bold;
+}
