--- a/Lecture_27/style2.css
+++ b/Lecture_27/style2.css
@@ -54,7 +54,33 @@
     height: 10%;
     background-color: rgba(145, 195, 243, 0.897);
     border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 20px;
+    padding-left: 20px;
 }
+
+.leftBox{
+    height: 100%;
+    display: flex;
+    /* flex-direction: row; */
+    /* width: fit-content; */
+    gap: 15px;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.imageBox{
+    /* align-self: center; */
+    height: 3.5rem;
+    width: 3rem;
+    padding-top: 20px;
+}
+
+/* .rightBox{
+
+} */
 
 #paymentButton{
     width: 80%;
